--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
         "url": "git+https://gitlab.stage.hive.pt/joamag/cleanup-hosted.git"
     },
     "license": "Apache-2.0",
+    "scripts": {
+        "build": "ncc build index.js -o dist"
+    },
     "dependencies": {
         "@actions/core": "^1.2.4",
         "@actions/github": "^3.0.0"
+    },
+    "devDependencies": {
+        "@zeit/ncc": "^0.22.3"
     }
 }
