--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
         "watch": "nodemon --ignore /dist/*.js --exec npm run build"
     },
     "dependencies": {
-        "@actions/core": "^1.10.0",
-        "@actions/github": "^5.1.1"
+        "@actions/core": "^1.10.1",
+        "@actions/github": "^6.0.0"
     },
     "devDependencies": {
-        "@zeit/ncc": "^0.22.3",
-        "nodemon": "^2.0.20"
+        "@vercel/ncc": "^0.38.1",
+        "nodemon": "^3.1.0"
     }
 }
